[package]
name = "bevy_rendertype"
version = "0.8.0"
edition = "2021"
description = "Provides rendering types for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
png = ["image/png"]
hdr = ["image/hdr"]
tga = ["image/tga"]
jpeg = ["image/jpeg"]
bmp = ["image/bmp"]
dds = ["ddsfile"]

# For ktx2 supercompression
zlib = ["flate2"]
zstd = ["ruzstd"]

trace = ["profiling"]
tracing-tracy = []
wgpu_trace = ["wgpu/trace"]
ci_limits = []
webgl = ["wgpu/webgl"]

[dependencies]
# bevy
bevy_reflect = { path = "../bevy_reflect", version = "0.8.0", features = ["bevy"] }
bevy_math = { path = "../bevy_math", version = "0.8.0" }
bevy_asset = { path = "../bevy_asset", version = "0.8.0" }
bevy_core = { path = "../bevy_core", version = "0.8.0" }
bevy_utils = { path = "../bevy_utils", version = "0.8.0" }

# rendering
image = { version = "0.24", default-features = false }

# misc
wgpu = { version = "0.13.1", features = ["spirv"] }
serde = { version = "1", features = ["derive"] }
bitflags = "1.2.1"
thiserror = "1.0"
hex = "0.4.2"
ddsfile = { version = "0.5.0", optional = true }
ktx2 = { version = "0.3.0", optional = true }
# For ktx2 supercompression
flate2 = { version = "1.0.22", optional = true }
ruzstd = { version = "0.2.4", optional = true }
# For transcoding of UASTC/ETC1S universal formats, and for .basis file support
basis-universal = { version = "0.2.0", optional = true }
encase = { version = "0.3", features = ["glam"] }
# For wgpu profiling using tracing. Use `RUST_LOG=info` to also capture the wgpu spans.
profiling = { version = "1", features = ["profile-with-tracing"], optional = true }
